Movie Class, Network Utils Sorting, string.xml, min SDK 26

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PopularMovieBeta</string>
+
+    <!-- SORT MOVIES -->
+    <string name="popularity_desc">popularity.desc</string>
+    <string name="highest_rated">vote_average.desc</string>
+
 </resources>
