--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">PopularMovieBeta</string>
 
+    <!--PLEASE INSERT YOUT API_KEY TO RUN THIS APP-->
+    <string name="api_key">546ac5863d9083b1cf9d85daabc5446a</string>
+
     <!-- SORT MOVIES -->
     <string name="popularity_desc">popularity.desc</string>
     <string name="highest_rated">vote_average.desc</string>
