--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PopularMovieBeta</string>
+    <string name="app_name">Popular Movies</string>
 
     <!--PLEASE INSERT YOUT API_KEY TO RUN THIS APP-->
     <string name="api_key">546ac5863d9083b1cf9d85daabc5446a</string>
@@ -23,7 +23,6 @@
         <item>top_rated</item>
     </string-array>
     <string name="sort_by_summary">Show Movies Based On Sorting Preference</string>
-
 
 
 </resources>
