Created table for Favorites & insertion of the movie.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,8 @@
 
     <string name ="author_label">N/A</string>
 
+    <string name ="favorites_label">Add to Favorites!</string>
+
 
 
 </resources>
